<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mobidevelop.jpdistribution.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:background="@drawable/backgroundlogin">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/segmentedButton"
        android:background="#2e6ab2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="MAP"
            android:id="@+id/segmentedMap"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="LIST"
            android:id="@+id/segmentedList"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@+id/segmentedButton"
        android:id="@+id/tandaPek"
        android:background="#2e6ab2">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="#eb8532"
            android:id="@+id/tandaMap">

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="#eb8532"
            android:id="@+id/tandaList"
            android:visibility="invisible">

        </FrameLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/start"
        android:id="@+id/button4"
        android:background="@drawable/mybutton"
        android:layout_alignParentBottom="true"
        android:textSize="20sp"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shadow"
        android:id="@+id/contentPelanggan"
        android:visibility="invisible">

        <TableLayout
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:id="@+id/tableLayout"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/namaPelanggan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/alamat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/telepon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/ID" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/pelangganID" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/jarakUser"
                android:visibility="invisible" />
        </TableLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/house"
            android:background="#efefef"
            android:layout_toLeftOf="@+id/imageButton"
            android:layout_toStartOf="@+id/imageButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/get_route"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:id="@+id/getRoute"
            android:background="#eb8532"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:visibility="gone" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/done"
            android:textSize="9sp"
            android:id="@+id/done"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/mybuttondone"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:visibility="invisible" />

        <Button
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/skip"
            android:textSize="9sp"
            android:id="@+id/skip"
            android:layout_below="@+id/done"
            android:layout_alignRight="@+id/done"
            android:layout_alignEnd="@+id/done"
            android:background="@drawable/mybuttonskip"
            android:visibility="invisible" />

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="60dp"
            android:id="@+id/imageButton"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/done"
            android:layout_toStartOf="@+id/done"
            android:layout_marginRight="10dp"
            android:src="@drawable/toggletrack"
            android:layout_marginTop="5dp"
            android:visibility="invisible" />

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="60dp"
            android:id="@+id/imageButton2"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/done"
            android:layout_toStartOf="@+id/done"
            android:layout_marginRight="10dp"
            android:src="@drawable/toggletrack"
            android:layout_marginTop="5dp"
            android:visibility="invisible" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/stop"
            android:id="@+id/button6"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_alignStart="@+id/imageButton"
            android:layout_marginBottom="5dp"
            android:background="@drawable/mybutton"
            android:layout_marginRight="5dp"
            android:textSize="12sp"
            android:layout_marginLeft="5dp" />



    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mapFrame"
        android:layout_below="@+id/tandaPek"
        >

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tandaPek" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tandaPek"
        android:layout_above="@+id/contentPelanggan"
        android:visibility="invisible"
        android:id="@+id/listFrame">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView2"
            android:paddingBottom="1dp"
            android:layout_marginLeft="10dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listLayout"
                android:background="#ffffff"></TableLayout>
        </ScrollView>
    </FrameLayout>


</RelativeLayout>
